--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -18,12 +18,12 @@ padding: 20px 20px;
     margin-top: 20px;
     height: 34px;
     padding: 5px;
+    /* width: 50px; */
 }
 .email button{
     background-color: midnightblue;
     color: white;
-    border: solid;
-    /* height: 38px; */
+    border: 1px solid black;
     padding: 5px;
 }
 
@@ -62,8 +62,8 @@ justify-content: space-around;
 margin: auto;
 padding: 20px 20px;
 } 
-.thank br{
-    display: none;
+.email button{
+    border: 1px solid black;
 }
 
 .copy{
@@ -82,4 +82,20 @@ padding: 20px 20px;
     
 }
 
+}
+
+@media screen and (min-width:760px){
+ .thank {
+    width: 250px;
+}   
+.newsletter input{
+    margin-top: 20px;
+    height: 34px;
+    width: 200px;
+    padding: 5px;
+} 
+.email button{
+    margin-top: 5px;
+    border: 1px solid black;
+}
 }
