--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -29,6 +29,7 @@
     margin-top: 20px;
     padding: 5px;
     background-color:white;
+    border: 1px solid black;
 }
 .btn2 {
     display: flex;
