--- a/src/index.css
+++ b/src/index.css
@@ -160,11 +160,14 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0.5rem;
   
 }
+.nav-header h1{
+  color: black;
+}
 .nav-toggle {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: var(--clr-primary-5);
   background: transparent;
   border-color: transparent;
